# sfmix

./: .gitattributes  .gitignore  .gitmodules  Pipfile  README.md  requirements.yml
.github/workflows/: looking-glass.yml  website.yml
.windsurf/workflows/: deploy-portal.md
ansible/: .gitignore  Makefile  Pipfile  README.md  ansible.cfg  deploy_akvorado.playbook.yml  deploy_lldp_dom_agent.playbook.yml  deploy_log_agent.playbook.yml  deploy_login.playbook.yml  deploy_looking_glass_rust.playbook.yml  deploy_openbsd_syslog.playbook.yml  deploy_portal.playbook.yml  generate_participants_ixf.playbook.yml  generate_participants_ixf_collection.playbook.yml  generate_participants_ixf_direct.playbook.yml  loki_sender_audit.py  netbox_schema.playbook.yml  peering_switch_config.playbook.yml  push_servers.playbook.yml  requirements.yml  sfmix_network_devices.build.playbook.yml  sfmix_network_devices.push.playbook.yml  test_netbox_participants_ixf.py  test_netbox_participants_ixf.yml
ansible/inventory/: netbox.management_router.yml  netbox.peering_switches.yml  participants.py  servers.yml
collections/: requirements.yml
deploy/: .gitignore  Makefile  Pipfile  README.md  ansible.cfg  push_servers.playbook.yml  requirements.yml  sfmix_network_devices.build.playbook.yml  sfmix_network_devices.push.playbook.yml
deploy/filter_plugins/: py.py  text.py
deploy/inventory/: netbox.management_routers.yml  netbox.peering_switches.yml  netbox_devices.yml  servers.yml
deploy/network_devices/: build_switch_configs.playbook.yml  push_switch_configs.playbook.yml
deploy/roles/: requirements.yml
development_ixp/: Makefile  README.md
development_ixp/monitoring/: .env  .gitignore  Dockerfile.bootstrap_grafana  Dockerfile.rrdrest  Makefile  bootstrap_grafana.py  docker-compose.yml
development_ixp/netbox-docker/: Makefile  docker-compose.override.yml
development_ixp/virtual_network/: .ix.clab.yml.bak  Makefile  README.md  ix.clab.yml  port_map_7280.json  switch01.mapple.sfo01.cfg  switch01.sfo01.cfg  switch01.sfo02.cfg  switch01.starfleet.sfo02.cfg
documentation/: AS12276_BGP_Communities.md  AS40271_BGP_Communities.md  netbox-fiber-panel-module-type.md  netbox.md  nokia-sros-cheatsheet.md  sfmix-brand-style-guide.md
documentation/design_docs/: 001-management_ip_renumbering.md  002-underlay_ip_fabric_addressing_and_flow_export.md  003-login-sfmix-org-authentik-sso.md  004-looking-glass.md  005-nd-anomaly-detection.md
documentation/nokia_integration/: debugging-bgp-migration.md
looking-glass/: .gitignore  Cargo.toml  DREAMS.md  LICENSE  PLAN.md  README.md  build.rs
looking-glass/config/: example.yml  grammar.yml  participants.example.yml  policies.example.yml  test-nokia.yml
looking-glass/doc/: development.md  gnmi-design.md  operations.md
looking-glass/doc/nokia-json-samples/: README.md  router-bgp-neighbor.json  router-interface.json
looking-glass/lg-cli/: Cargo.toml
looking-glass/lg-cli/src/: dispatch.rs  main.rs
looking-glass/lg-client/: Cargo.toml
looking-glass/lg-client/src/: client.rs  sse.rs
looking-glass/lg-http/: Cargo.toml
looking-glass/lg-http/src/: main.rs  mcp.rs  rest.rs
looking-glass/lg-neighborhood-watch/: Cargo.toml  Dockerfile
looking-glass/lg-neighborhood-watch/src/: capture.rs  config.rs  evidence.rs  http.rs  lgpoll.rs  main.rs  ringbuf.rs  solicit.rs  store.rs
looking-glass/lg-server/: Cargo.toml
looking-glass/lg-server/src/: config.rs  main.rs  rpc_server.rs
looking-glass/lg-types/: Cargo.toml
looking-glass/lg-types/src/: command.rs  identity.rs  lib.rs  rpc.rs  structured.rs
looking-glass/src/: anomaly.rs  command.rs  completion.rs  config.rs  discovered.rs  format.rs  grammar.rs  identity.rs  ixf.rs  lib.rs  mac_table.rs  main.rs  netbox.rs  oidc.rs  participants.rs  peeringdb.rs  policy.rs  ratelimit.rs  service.rs  structured.rs
looking-glass/src/backend/: arista_eos.rs  driver.rs  mod.rs  nokia_sros.rs  pool.rs  ssh.rs  ssh_pool.rs
looking-glass/src/bgp/: bgplgd.rs  birdwatcher.rs  mod.rs  pool.rs
looking-glass/src/frontend/: auth.rs  common.rs  http.rs  mcp.rs  mod.rs  rest.rs  ssh.rs  telnet.rs
looking-glass/test/clab/: lg-test.clab.yml  lg-test.yml  lg_host_key.pub  mapple.cfg  participants.yml  port_map.json  starfleet.cfg  switch01.sfo01.cfg  switch01.sfo02.cfg
network-map/: ARCHITECTURE.md  CIRCUITS_NETBOX_STEPS.md  CIRCUITS_PLAN.md  DEPLOY.md  PORTING.md  README.md  decorations.geojson  import_atlas.sh  sites.json
network-map/atlas/: Boldyn-00000231-0000.geojson  DF-00000231-0000.geojson  DF-00000231-0004.geojson  DF-231-4.geojson  DF-231-4_sjc02-scl05.geojson  F22M-0204477.geojson  FBDK-1721530-ZFS.geojson  FBDK-1721530.geojson  FID-2021-0106.geojson  FID-2022-0145.geojson  FID-2023-0407.geojson  FID-2023-0408.geojson  FID-2023-0409.geojson  FID-2025-0740.geojson  FID-2025-0741.geojson  FID-2025-0742.geojson  FID-2025-0762.geojson  FID-2025-0763.geojson  SO-00000231-0000.geojson  SO-00000231-0002.geojson  SO-00000231-0003.geojson  _TEMPLATE.geojson
network-map/basemap/: README.md  fetch_basemap.py  fetch_dem.py  fetch_rights_of_way.py  gen_sutro_tower.py  quantize_dem.py
network-map/dev/: demo_index.html  deploy_demo.sh  deploy_loader_lab.sh  gen_live_fixtures.py  gen_synth_traffic.py  make_fixture.py  screenshot.mjs  serve.py
network-map/fixtures/: eapi.json  ifspeed.json  map.json  sites.json  topology.json
portal/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt  tailwind.input.css
portal/dashboard/: alice_client.py  apps.py  backends.py  devauth.py  http_pool.py  lg_client.py  middleware.py  (+5 more)
roles/: requirements.yml
scripts/: Makefile  Pipfile  discovery.py  gen_map_structure.py  gen_weathermap.py  mac_discovery.py  map_boldyn_route.py  map_circuits.py  map_coarsen.py  map_intra_cabling.py  map_kmz.py  map_kmz_mine.py  map_trace_path.py  netbox_backbone_lint.py  netbox_ix_lint.py  new_participant.py  participant_speeds.py  route_server_parity.py  vm_discovery.py  weathermap_layouts.py
sensors/: airlytix-es1.yaml
website/: .gitignore  README.md  hugo.toml
(+634 files in other folders)
