[package]
name = "lg-cli"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Looking glass CLI frontends (telnet + SSH)"

[[bin]]
name = "lg-cli"
path = "src/main.rs"

[dependencies]
lg-types = { path = "../lg-types" }
lg-client = { path = "../lg-client" }
looking-glass = { path = ".." }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
russh = "0.54"
rand = "0.8"
