[package]
name = "lg-neighborhood-watch"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Passive ARP/NDP neighbor sensor for the IX fabric"

[[bin]]
name = "lg-neighborhood-watch"
path = "src/main.rs"

[dependencies]
lg-client = { path = "../lg-client" }
anyhow.workspace = true
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
axum = "0.8"
pnet = "0.35"
socket2 = { version = "0.5", features = ["all"] }
