[package]
name = "lg-server"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Looking glass RPC backend server"

[[bin]]
name = "lg-server"
path = "src/main.rs"

[dependencies]
lg-types = { path = "../lg-types" }
looking-glass = { path = ".." }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
arc-swap = "1"
